--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,22 @@ services:
       - '8000:8000'
     env_file:
       - ./backend/.env
+  # ここから下を追記する
+  mysql:
+    image: mysql/mysql-server:5.7
+    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+    ports:
+      - '3306:3306'
+    environment:
+      TZ: Asia/Tokyo
+      MYSQL_ROOT_PASSWORD: '${DB_ROOT_PASSWORD}'
+      MYSQL_DATABASE: '${DB_DATABASE}'
+      MYSQL_USER: '${DB_USERNAME}'
+      MYSQL_PASSWORD: '${DB_PASSWORD}'
+    volumes:
+      - /var/lib/mysql
+    env_file:
+      - ./.env
   nginx:
       build:
         context: ./nginx/
