--- a/.env
+++ b/.env
@@ -1,5 +1,13 @@
+PROJECT_NAME=mynuxt
 DB_DATABASE=database
 DB_USERNAME=user
 DB_PASSWORD=password
 DB_ROOT_PASSWORD=root
 DB_CONNECTION=mysql
+#’¼mysql
+#mysql -h localhost -u user -p database
+
+#ports
+PHP_HTTP_PORT=80
+PHP_HTTPS_PORT=443
+PHPMYADMIN_PORT=8080
