--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       - ./backend/.env
   # ここから下を追記する
   mysql:
+    container_name: ${PROJECT_NAME}-mysql
     image: mysql/mysql-server:5.7
     command: --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     ports:
@@ -50,3 +51,28 @@ services:
         - backend
       volumes:
         - /var/run/docker.sock:/tmp/docker.sock:ro
+  #phpmyadmin
+  phpmyadmin:
+    container_name: ${PROJECT_NAME}-phpmyadmin
+    image: phpmyadmin/phpmyadmin
+    volumes:
+      - ./phpmyadmin/config.user.inc.php:/etc/phpmyadmin/config.user.inc.php
+    ports:
+      - ${PHPMYADMIN_PORT}:80
+    depends_on:
+      - mysql
+    environment:
+      - PMA_ARBITRARY=1
+      - PMA_HOST=${PROJECT_NAME}-mysql
+      - PMA_USER=${DB_USERNAME}
+      - PMA_PASSWORD=${DB_PASSWORD}
+      - MEMORY_LIMIT=500M
+      - UPLOAD_LIMIT=500M
+      - MAX_EXECUTION_TIME=1000
+  #メールサーバのコンテナ
+  mailhog:
+    container_name: ${PROJECT_NAME}-mailhog
+    image: mailhog/mailhog:latest
+    ports:
+      - "8025:8025"
+      - "1025:1025"
